force-app/main/default/objects/QuoteLine__c/QuoteLine__c.object-meta.xml
<CustomObject>
    <label>QuoteLine</label>
    <nameField>
        <label>QuoteLine Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QuoteLines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>