force-app/main/default/objects/QuoteLine__c/fields/Line_Total_Q__c.field-meta.xml
<CustomField>
    <fullName>Line_Total_Q__c</fullName>
    <formula>Quantity__c  *  Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Total_Q</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>