force-app/main/default/objects/QuoteLine__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>QuoteLines</relationshipLabel>
    <relationshipName>QuoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>